--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
+/bin
+/obj
+/packages
+bin/
+obj/
+packages/
 bin
 obj
+packages
+packages/NUnit.3.5.0/.signature.p7s
+packages/NUnit.3.5.0/.signature.p7s
+packages/NUnit.3.5.0/CHANGES.txt
+packages/NUnit.3.5.0/LICENSE.txt
+packages/NUnit.3.5.0/NOTICES.txt
+packages/NUnit.3.5.0/NUnit.3.5.0.nupkg
+packages/NUnit.3.5.0/lib/dotnet/nunit.framework.dll
+packages/NUnit.3.5.0/lib/dotnet/nunit.framework.xml
+packages/NUnit.3.5.0/lib/net20/nunit.framework.dll
+packages/NUnit.3.5.0/lib/net20/nunit.framework.xml
+packages/NUnit.3.5.0/lib/net20/NUnit.System.Linq.dll
+packages/NUnit.3.5.0/lib/net35/nunit.framework.dll
+packages/NUnit.3.5.0/lib/net35/nunit.framework.xml
+packages/NUnit.3.5.0/lib/net40/nunit.framework.dll
+packages/NUnit.3.5.0/lib/net40/nunit.framework.xml
+packages/NUnit.3.5.0/lib/net45/nunit.framework.dll
+packages/NUnit.3.5.0/lib/net45/nunit.framework.xml
+packages/NUnit.3.5.0/lib/portable-net45+win8+wp8+wpa81+Xamarin.Mac+MonoAndroid10+MonoTouch10+Xamarin.iOS10/nunit.framework.dll
+packages/NUnit.3.5.0/lib/portable-net45+win8+wp8+wpa81+Xamarin.Mac+MonoAndroid10+MonoTouch10+Xamarin.iOS10/nunit.framework.xml
+TestCollectNews/packages.config
+TestCollectNews/Tests.cs
